# nuclear_phenotyping

./: .gitignore  Makefile  README.md  Snakefile  cellprofiler.yaml  environment.yaml  environment.yml  grid_16.npy  napari_annotator.py  napari_shape_to_inst.py  notebook.py  pyproject.toml  spline_only.py  splinedist.yaml  splines.ipynb  splines.py
analysed/models/cellesce_M16/logs/images/: events.out.tfevents.1650971798.beast.2911318.4333.v2
analysed/models/model_16_dsb2018/: thresholds.json
cellesce/: __init__.py  dataset.py  shapes.py
cellprofiler/: bad_cols.json  environment.yaml  instance_cp4.cpproj  merge_csv.py  unet_cp4.cpproj  unet_cp4_3_class.cpproj
config/: config.yaml
segmentation/splinedist/: environment.yaml  infer.py  phi_16.npy
segmentation/splinedist/models/cellesce_M16/: config.json
segmentation/splinedist/models/model_16_dsb2018/: config.json
segmentation/stardist/: infer.py
segmentation/unet/: infer.py
splinedist/: environment.yaml  infer.py  training.py
stardist/: infer.py
supervisely/: Snakefile  config.yaml  environment.yaml  main.py
supervisely/cellpose/: cellpose2.py  environment.yaml
supervisely/envs/: convert_to_png.yaml  zarr.yaml
supervisely/rules/: convert_to_png.smk  supervisely.smk
supervisely/scripts/: convert_to_png.py  convert_to_pngs.py  get_mask_from_supervisely.py  get_masks.py  get_masks_for_cellpose.py  upload_to_supervisely.py
tests/: test_dataset.py
unet/: environment.yaml  infer.py  unet_segmentation.py
utils/: napari_shape_to_inst.py
(+20 files in other folders)
