[tool.poetry]
name = "cellesce"
version = "0.1.0"
description = ""
authors = ["ctr26 <ctr26@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8.8"
seaborn = "^0.11.2"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
